--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8">
-  <title>AI Chatbot 測試</title>
+  <title>AI Chatbot </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     df-messenger {
@@ -16,26 +16,20 @@
   </style>
 </head>
 <body>
-  <h2>AI機器人 2.0 / Emily</h2>
+  <h2>AI機器人 2.0 </h2>
 
-  <df-messenger
-    intent="WELCOME"
-    chat-title="EmilyBot"
-    agent-id="neckpaindoctor-lxns"
-    language-code="zh-Hant">
-  </df-messenger>
 
   <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
-  <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
-  
-  <df-messenger
+<df-messenger
   intent="WELCOME"
-  chat-title="NeckPain_task_oriented"
-  agent-id="2682e77f-51e7-4fae-bbd9-577fa0924f6e"
-  language-code="zh-tw">
-  </df-messenger>
+  chat-title="social_oriented"
+  agent-id="8fecf425-0e50-4e7b-9b38-da001f375efb"
+  language-code="en"
+></df-messenger>
 
+  
   
 </body>
 </html>
+
 
