--- a/index.html
+++ b/index.html
@@ -2,73 +2,98 @@
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>開始使用</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <title>EmilyBot 入口頁</title>
 
   <style>
-    body {
+    /* 整頁容器：保持滿版 + 響應式 */
+    body, html {
       margin: 0;
       padding: 0;
-      background: #f7f7f7;
-      font-family: Arial, sans-serif;
+      height: 100%;
+      width: 100%;
+      overflow: hidden; /* 避免背景出現捲軸 */
+    }
+
+    /* === 封面主容器 === */
+    .cover-container {
+      height: 100vh;
+      width: 100%;
+      background-image: url('bot_doctor.jpg'); 
+      /* ↑↑↑ 這裡可以更換你的封面圖片 */
+
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
-      height: 100vh;
       text-align: center;
+
+      padding: 0 20px;
     }
 
-    .card {
-      background: #fff;
-      padding: 30px;
-      border-radius: 16px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.1);
-      max-width: 350px;
-      width: 90%;
-    }
-
-    .card img {
-      width: 120px;
-      height: 120px;
-      border-radius: 50%;
+    /* === 標題 === */
+    .cover-title {
+      font-size: 3vw; /* 🚀 RWD：自動依畫面縮放 */
+      color: white;
+      text-shadow: 0 2px 10px rgba(0,0,0,0.5);
       margin-bottom: 20px;
     }
 
-    h1 {
-      font-size: 24px;
-      margin-bottom: 10px;
+    /* 手機太小 → 最低字體限制 */
+    @media (max-width: 480px) {
+      .cover-title {
+        font-size: 6vw;
+      }
     }
 
-    p {
-      font-size: 16px;
-      color: #666;
-      margin-bottom: 25px;
+    /* === 按鈕 === */
+    .start-btn {
+      font-size: 1.2rem;
+      padding: 14px 32px;
+      background-color: rgba(255,255,255,0.9);
+      border: none;
+      border-radius: 16px;
+      cursor: pointer;
+      transition: transform 0.2s ease, background-color 0.2s ease;
     }
 
-    .start-button {
-      background: #007bff;
-      padding: 12px 20px;
-      border-radius: 10px;
-      color: white;
-      text-decoration: none;
-      font-size: 18px;
-      display: inline-block;
-      width: 100%;
+    .start-btn:hover {
+      background-color: rgba(255,255,255,1);
+      transform: scale(1.05); /* 按鈕微動作 */
     }
+
+    /* 手機按鈕自動縮小 */
+    @media (max-width: 480px) {
+      .start-btn {
+        font-size: 1rem;
+        padding: 12px 24px;
+      }
+    }
+
   </style>
 </head>
 
 <body>
-  <div class="card">
-    <img src="你的頭貼.png">
-    <h1>歡迎來到 AIBot</h1>
-    <p>點擊下方按鈕開始互動。</p>
 
-    <a href="chat.html" class="start-button">開始</a>
+  <div class="cover-container">
+    <h1 class="cover-title">AI BOT</h1>
+    <!-- ↑↑↑ 可自由修改 -->
+
+    <button class="start-btn" onclick="location.href='chat.html'">
+      開始
+    </button>
+    <!-- ↑↑↑ 可自由修改 -->
   </div>
-</body>
 
+</body>
 </html>
+
+
 
 
 
